--- a/src/app/landing/landing.component.scss
+++ b/src/app/landing/landing.component.scss
@@ -1,9 +1,40 @@
+$top-block-height: 60vh; //clamp(282px, 55vh, max(100vw, 420px));
+$header: 56px;
+
 :host {
   mat-card {
     --mat-card-elevated-container-shape: 0 0 5px 5px;
     --mat-card-elevated-container-color: #100c29;
     padding-top: 0;
     padding-bottom: 0;
+  }
+}
+
+@mixin posterSize($percentage, $header_, $container-height) {
+  .popular-movie {
+    $posterHeight: calc((100vh - #{$header_} - 5px - (100vh - #{$container-height})) * $percentage);
+    $posterWidth: calc(2 / 3 * $posterHeight);
+    width: $posterWidth;
+    height: $posterHeight;
+  }
+}
+
+@mixin blockHeights($top-block-height_) {
+  .top-block {
+    height: calc(100vh - #{$header} - (100vh - #{$top-block-height_}));
+  }
+  .middle-block {
+    min-height: calc(100vh - #{$header} - #{$top-block-height_});
+  }
+
+  .popular-movies-container .scroll-container-0 {
+    @include posterSize(0.3, $header, $top-block-height_);
+  }
+  .popular-movies-container .scroll-container-1 {
+    @include posterSize(0.5, $header, $top-block-height_);
+  }
+  .popular-movies-container .scroll-container-2 {
+    @include posterSize(0.2, $header, $top-block-height_);
   }
 }
 
@@ -19,9 +50,9 @@
   }
 
   .poll-a-lot-header {
-    margin: 20px auto;
-    max-width: 400px;
-    max-height: 26vh;
+    margin: 5px;
+    height: clamp(69px, 20vw, 26vh);
+    width: auto;
     object-fit: contain;
   }
 }
@@ -54,14 +85,38 @@
     margin: 0 14px 0 0;
   }
 
-  .right-edge {
-    position: absolute;
-    right: calc(-100vw + 30%);
-    height: calc(100% + 15px);
-    top: -15px;
-    width: 100vw;
-    background-image: linear-gradient(to right, transparent 0 1%, var(--mat-card-elevated-container-color));
-    z-index: 2;
+  &-row {
+    position: relative;
+      @starting-style {
+        opacity: 0;
+      }
+
+    .fade {
+      position: absolute;
+      height: calc(100% + 15px);
+      top: -15px;
+      width: 0;
+      background-image: linear-gradient(to right, transparent 0 1%, var(--mat-card-elevated-container-color));
+      z-index: 2;
+      width: max(10vw, 70px);
+      transition: opacity 200ms ease-in;
+
+      &.left-side {
+        left: 0;
+        background-image: linear-gradient(to left, transparent 0 1%, var(--mat-card-elevated-container-color));
+      }
+
+      &.right-side {
+        right: 0;
+      }
+    }
+
+    .leaving {
+      opacity: 0;
+      transition:
+        opacity 500ms ease-out,
+        transform 500ms ease-out;
+    }
   }
 }
 
@@ -151,9 +206,26 @@ $anim-speed: 0.65; // in seconds
   left: -20px;
   top: -20px;
   right: -20px;
-  padding: 20px;
+  padding: 15px 20px 15px;
   z-index: 2;
 }
+
+.middle-block {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+
+  .flex {
+      justify-content: center;
+      align-items: center;
+  }
+
+  .flex-column {
+    max-width: 290px;
+  }
+}
+
+$middle-font-size: clamp(10px, max(12px, 3.75vw), clamp(14px, 2.5vw, 19px));
 
 .header-container {
   width: calc(100% + 2 * 20px);
@@ -170,29 +242,33 @@ $anim-speed: 0.65; // in seconds
 
   .title-text {
     text-align: left;
-    font-size: min(7vw, 50px);
+    font-size: calc(1.8 * #{$middle-font-size});
+    line-height: 1.15em;
     margin: 0;
   }
 
   .sub-text {
-    font-size: clamp(12px, max(14px, 4vw), 22px);;
+    font-size: $middle-font-size;
     text-align: left;
+    margin: 0.8em 0;
   }
 }
 
 .middle-container {
   margin: -40px -40px 0;
   padding: 40px;
-
-  movie-search-input {
-    position: relative;
-    top: 10px;
-  }
 }
 
 .recent-poll-container {
   animation: pl-drop-in 1200ms ease 200ms backwards;
   min-height: 57px;
+}
+
+@media(min-width: 749px) {
+  .action-container {
+    // position: relative;
+    // bottom: 25px;
+  }
 }
 
 .create-btn {
@@ -215,10 +291,9 @@ $anim-speed: 0.65; // in seconds
   & > div {
     animation: pl-drop-in 1200ms ease 400ms backwards;
   }
-  
-  font-size: 16px;
+
+  font-size: calc(0.9 * #{$middle-font-size});;
   min-height: 49px;
-  align-content: flex-end;
 
   &-title {
     text-decoration: underline;
@@ -226,11 +301,12 @@ $anim-speed: 0.65; // in seconds
 }
 
 .popular-movies-container {
-  width: calc(100% + 2 * 31px);
-  min-height: clamp(282px, 325px, max(100vw, 420px));
+  width: calc(100% + 62px);
   overflow: hidden;
-  margin: 10px 0 22px -31px;
+  margin: 0 0 0 -31px;
+  padding: 5px 0;
   position: relative;
+  top: -15px;
 
   .popular-movie {
     margin: 0 3px;
@@ -245,7 +321,6 @@ $anim-speed: 0.65; // in seconds
       --marquee-speed: calc(60s * 4);
       transform: rotate(-2deg);
 
-
       .scroll {
         animation: scroll-left var(--marquee-speed) linear infinite;
       }
@@ -256,7 +331,6 @@ $anim-speed: 0.65; // in seconds
       --marquee-speed: calc(60s * 6); //6
       transform: rotate(5deg);
       z-index: 5;
-
 
       .scroll {
         animation: scroll-right var(--marquee-speed) linear infinite;
@@ -343,5 +417,46 @@ movie-search-input {
         top: 10px;
       }
     }
+}
 
+@include blockHeights($top-block-height);
+
+@media(min-width: 600px) {
+  @include blockHeights(55vh);
+}
+
+@media (min-aspect-ratio: 1/1) {
+  // Middle block into horizontal layout
+  @include blockHeights(60vh);
+
+  .middle-block .flex {
+    flex-direction: row;
+
+  }
+  .middle-block .flex-column {
+    max-width: none;
+    flex-direction: row;
+    gap: 40px;
+  }
+
+  $middle-font-size: clamp(9px, max(12px, 3.75vw), clamp(14px, 2.5vw, 16px));
+  .header-container .middle-block {
+    .title-text {
+      font-size: calc(2 * #{$middle-font-size});
+      white-space: nowrap;
+    }
+
+    .sub-text {
+      font-size: calc(1.01 * #{$middle-font-size});
+      max-width: 250px;
+    }
+    .recent-poll {
+      font-size: calc(1 * #{$middle-font-size});
+    }
+
+    img.poll-a-lot-header {
+      height: clamp(69px, 20vw, 10vh);
+      width: auto;
+    }
+    }
 }
