--- a/src/app/movie-poll-item/movie-dialog/movie-dialog.html
+++ b/src/app/movie-poll-item/movie-dialog/movie-dialog.html
@@ -127,6 +127,7 @@
           [rating]="movie.tmdbRating"
           [showWatchlistMarker]="true"
           [allowFullscreen]="true"
+          size="m"
         ></poster>
         @if (movie?.originalObject) {
         <div class="available-short-container">
