--- a/src/app/movie-poll-item/movie-poll-item.component.html
+++ b/src/app/movie-poll-item/movie-poll-item.component.html
@@ -199,7 +199,7 @@ movie))) {
 <div class="loading movie-poll">
   <mat-card class="poll-item-loader-card">
     <div class="flex movie-content">
-      <poster></poster>
+      <poster size="m"></poster>
       <div class="flex-column movie-details">
         <div class="loading-sub-text"></div>
         <div class="loading-main-text"></div>
