--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -9,7 +9,8 @@
     without a notice. You've been warned! 😉
   </p>
   <p>
-    This application uses the TMDb API but is not endorsed or certified by TMDb.
+    This application uses the TMDb API but is not endorsed or certified by TMDb.<br/>
+    This applications uses the Letterboxd API but is not endorsed or certified by Letterboxd.<br/>
     Also ratings data from OMDb API is used.
   </p>
   <p><span class="version">poll-a-lot v{{ version }}</span><br/></p>
